--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>shopping-cart</artifactId>
+    <artifactId>shopping-cart-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
@@ -28,7 +28,9 @@
                         <target>1.8</target>
                         <compilerArgs>
                             <arg>-parameters</arg>
-                            <arg>-Xlint:all,-options,-path</arg>
+                            <arg>-Xlint:unchecked</arg>
+                            <arg>-Xlint:deprecation</arg>
+                            <arg>-Werror</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
