--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>shopping-cart-java</artifactId>
+    <artifactId>shopping-cart</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
@@ -28,9 +28,7 @@
                         <target>1.8</target>
                         <compilerArgs>
                             <arg>-parameters</arg>
-                            <arg>-Xlint:unchecked</arg>
-                            <arg>-Xlint:deprecation</arg>
-                            <arg>-Werror</arg>
+                            <arg>-Xlint:all,-options,-path</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -171,7 +169,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lagom.version>1.5.0-RC2</lagom.version>
+        <lagom.version>1.4.11</lagom.version>
         <scala.binary.version>2.12</scala.binary.version>
         <akka.management.version>1.0.0-RC2</akka.management.version>
         <akka.http.version>10.1.7</akka.http.version>
