--- a/shopping-cart/pom.xml
+++ b/shopping-cart/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>shopping-cart</artifactId>
+        <artifactId>shopping-cart-example</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>shopping-cart-impl</artifactId>
+    <artifactId>shopping-cart</artifactId>
 
     <packaging>jar</packaging>
 
@@ -99,6 +99,15 @@
                         </image>
                     </images>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>build-docker-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
